--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,24 +1,23 @@
-
-
 <body class="parent">
     <div class="container">
         <div class="login-box">
             <h2>Login</h2>
-            <form action="#">
+            <form (submit)="login(email.value, password.value)">
                 <div class="input-box">
-                    <input type="email" required>
-                    <label>Email/nameUser</label>
+                    <input type="email" id="email" #email required>
+                    <label for="email">Email/Username</label>
                 </div>
                 <div class="input-box">
-                    <input type="password" required>
-                    <label>Password</label>
+                    <input type="password" id="password" #password required>
+                    <label for="password">Password</label>
                 </div>
                 <div class="forgot-pass">
                     <a href="#">Forgot your password?</a>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="button" class="btn" (click)="login(email.value, password.value)" >Login</button>
+                
                 <div class="signup-link">
-                    <a href="/register">Signup</a>
+                    <a routerLink="/register">Signup</a>
                 </div>
             </form>
         </div>
@@ -73,4 +72,5 @@
         <span style="--i:48;"></span>
         <span style="--i:49;"></span>
     </div>
+    <router-outlet></router-outlet>
 </body>
