--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -2,25 +2,25 @@
     <div class="container">
         <div class="register-box">
             <h2>Signup</h2>
-            <form action="#">
+            <form (submit)="signUp(nameUser.value, email.value, password.value, address.value, role.value)">
                 <div class="input-box">
-                    <input type="text" id="nameUser" name="nameUser" required>
+                    <input type="text" id="nameUser" #nameUser name="nameUser" required>
                     <label for="nameUser">Name</label>
                 </div>
                 <div class="input-box">
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" #email name="email" required>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-box">
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" #password name="password" required>
                     <label for="password">Password</label>
                 </div>
                 <div class="input-box">
-                    <input type="text" id="address" name="address" required>
+                    <input type="text" id="address" #address name="address" required>
                     <label for="address">Address</label>
                 </div>
                 <div class="input-box">
-                    <select class="select" id="role" name="role" required>
+                    <select class="select" id="role" #role name="role" required>
                         <option value=""></option>
                         <option value="admin">Manager</option>
                         <option value="user">User</option>
@@ -28,6 +28,7 @@
                     <label for="role">Role</label>
                 </div>
                 <button type="submit" class="btn">SignUp</button>
+
             </form>
         </div>
         <span style="--i:0;"></span>
