--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,11 @@
 <div class="background">
     <div class="rectangle"></div>
-    <div class="example-label"></div>
-    <div class="example-button-row">
+    <div class="circle">
+        <img [src]="imageUrl" alt="Image" class="circle-image">
     </div>
+    <div>
+        <img class="text_kitchen" src="../../../assets/kitchens-01.png"> 
+    </div>
+    <div class="example-label"></div>
+    <div class="example-button-row"></div>
 </div>
