--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -130,3 +130,10 @@ h2 {
 .signup-link a:hover {
     text-decoration: underline;
 }
+
+.error-message {
+    color: hsl(17.75deg 49.65% 71.96%);
+    font-weight: bolder;
+    margin-top: 10px;
+  }
+  
