--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,31 +1,32 @@
 <body class="parent">
     <div class="container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form (submit)="login(email.value, password.value)">
-                <div class="input-box">
-                    <input type="email" id="email" #email required>
-                    <label for="email">Email/Username</label>
-                </div>
-                <div class="input-box">
-                    <input type="password" id="password" #password required>
-                    <label for="password">Password</label>
-                </div>
-                <div class="forgot-pass">
-                    <a href="#">Forgot your password?</a>
-                </div>
-                <button type="button" class="btn" (click)="login(email.value, password.value)">Login</button>
+      <div class="login-box">
+        <h2>Login</h2>
+        <form (submit)="login()">
+          <div class="input-box">
+            <input type="email" id="email" name="email" [(ngModel)]="email" required>
+            <label for="email">Email/Username</label>
+          </div>
+          <div class="input-box">
+            <input type="password" id="password" name="password" [(ngModel)]="password" required>
+            <label for="password">Password</label>
+          </div>
+          <div class="forgot-pass">
+            <a href="#">Forgot your password?</a>
+          </div>
+          <button type="submit" class="btn">Login</button>
+          <div *ngIf="errorMessage" class="error-message">
+            {{ errorMessage }}
+          </div>
+          <div class="signup-link">
+            <button type="button" class="btn" (click)="navigateToSignup()">Signup</button>
+          </div>
+        </form>
+      </div>
+
+  
 
 
-                <div *ngIf="errorMessage" class="error-message">
-                    {{ errorMessage }}
-                </div>
-
-                <div class="signup-link">
-                    <a routerLink="/register">Signup</a>
-                </div>
-            </form>
-        </div>
         <span style="--i:0;"></span>
         <span style="--i:1;"></span>
         <span style="--i:2;"></span>
