--- a/src/app/component/one-recipes/one-recipes.component.scss
+++ b/src/app/component/one-recipes/one-recipes.component.scss
@@ -1,4 +1,92 @@
+
+
 .img{
-    width: 450px;
-    height: 450px;
+    width: 500px;
+    height: 500px;
 }
+
+h3 {
+    margin-top: 20px;
+  }
+  
+  h4 {
+    margin-top: 10px;
+  }
+  
+  ol {
+    text-align: right;
+    padding-left: 20px;
+    direction: rtl;
+  }
+  
+  ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    direction: rtl;
+  }
+/* Modal styles */
+.modal {
+    display: flex;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .delete-button-container {
+    margin-top: 20px;
+  }
+  
+
+  button {
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color:  hsl(17.75deg 49.65% 71.96%);;
+  }
+  
+  /* כפתור מחיקה */
+  .delete-button {
+    background-color:  hsl(17.75deg 49.65% 71.96%);
+    color:hsl(37.58deg 64.54% 27.65%);
+    transition: background-color 0.3s ease;
+  }
+  
+  .delete-button:hover {
+    background-color: hsl(18, 100%, 77%);
+  }
+  
