--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,36 +1,29 @@
 <body class="parent">
     <div class="container">
-        <div class="register-box">
-            <h2>Signup</h2>
-            <form (ngSubmit)="signUp(nameUser.value, email.value, password.value, address.value)">
-                <div class="input-box">
-                    <input type="text" id="nameUser" #nameUser name="nameUser" required>
-                    <label for="nameUser">Name</label>
-                </div>
-                <div class="input-box">
-                    <input type="email" id="email" #email name="email" required>
-                    <label for="email">Email</label>
-                </div>
-                <div class="input-box">
-                    <input type="password" id="password" #password name="password" required>
-                    <label for="password">Password</label>
-                </div>
-                <div class="input-box">
-                    <input type="text" id="address" #address name="address" required>
-                    <label for="address">Address</label>
-                </div>
-                <!-- <div class="input-box">
-                    <select class="select" id="role" #role name="role" required>
-                        <option value=""></option>
-                        <option value="admin">Manager</option>
-                        <option value="user">User</option>
-                    </select>
-                    <label for="role">Role</label>
-                </div> -->
-                <button type="button" class="btn" (click)="signUp(nameUser.value, email.value, password.value, address.value)">SignUp</button>
+      <div class="register-box">
+        <h2>Register</h2>
+        <form (submit)="signUp()">
+          <div class="input-box">
+            <input type="text" id="nameUser" name="nameUser" [(ngModel)]="nameUser" required>
+            <label for="nameUser">Name</label>
+          </div>
+          <div class="input-box">
+            <input type="email" id="email" name="email" [(ngModel)]="email" required>
+            <label for="email">Email/Username</label>
+          </div>
+          <div class="input-box">
+            <input type="password" id="password" name="password" [(ngModel)]="password" required>
+            <label for="password">Password</label>
+          </div>
+          <div class="input-box">
+            <input type="text" id="address" name="address" [(ngModel)]="address" required>
+            <label for="address">Address</label>
+          </div>
+          <button type="submit" class="btn">Register</button>
+        </form>
+      </div>
 
-            </form>
-        </div>
+  
         <span style="--i:0;"></span>
         <span style="--i:1;"></span>
         <span style="--i:2;"></span>
